# nonebot2-

./: README.md
Pachuoli_bot_env/: pyvenv.cfg
Pachuoli_bot_env/Scripts/: activate  activate.bat
pachuoli_bot/: README.md  pyproject.toml
