[project]
name = "pachuoli_bot"
version = "0.1.0"
description = "pachuoli_bot"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_gocqhttp", "nonebot_plugin_analysis_bilibili"]
plugin_dirs = []
builtin_plugins = ["echo", "single_session"]
